--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Terminocity - A Simple &amp; Semantic Front-End - Imarc</title>
+        <title>myCommute</title>
         <meta name="description" content="The Imarc Boilerplate is a streamlined starting point for building websites." />
         <meta name="web_author" content="Imarc, A Digital Agency | Boston + Silicon Valley | more info at imarc.com" />
         <meta name="viewport" content="width=device-width" />
@@ -20,7 +20,7 @@
                     <nav aria-label="Primary Navigation" class="primary">
                         <ul>
                             <li>
-                                <a href="">Maine</a>
+                                <a href="">Live Status</a>
                                 <div class="dropdown">
                                     <ul>
                                         <li><a href="">Augusta</a></li>
@@ -31,7 +31,7 @@
                                 </div>
                             </li>
                             <li class="active">
-                                <a href="#yup">Markup</a>
+                                <a href="#yup">Features</a>
                                 <div class="dropdown">
                                     <ul>
                                         <li><a href="#Typography">Typography</a></li>
@@ -44,7 +44,7 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="">New Hampshire</a>
+                                <a href="">Pricing</a>
                                 <div class="dropdown">
                                     <ul>
                                         <li><a href="">Concord</a></li>
@@ -55,7 +55,7 @@
                                 </div>
                             </li>
                             <li>
-                                <a href="">Vermont</a>
+                                <a href="">Download</a>
                                 <div class="dropdown">
                                     <ul>
                                         <li><a href="">Montpelier</a></li>
