--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                                 <a href="">Live Status</a>
                                 <div class="dropdown">
                                     <ul>
-                                        <li><a href="">Augusta</a></li>
-                                        <li><a href="">Eliot</a></li>
-                                        <li><a href="">Kittery</a></li>
-                                        <li><a href="">Portland</a></li>
+                                        <li><a href="">Summary</a></li>
+                                        <li><a href="">Underground</a></li>
+                                        <li><a href="">River</a></li>
+                                        <li><a href="">Buses</a></li>
+                                        <li><a href="">Other</a></a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -34,12 +35,9 @@
                                 <a href="#yup">Features</a>
                                 <div class="dropdown">
                                     <ul>
-                                        <li><a href="#Typography">Typography</a></li>
-                                        <li><a href="#Articles">Articles</a></li>
-                                        <li><a href="#Lists">Lists</a></li>
-                                        <li><a href="#Tables">Tables</a></li>
-                                        <li><a href="#Forms">Forms</a></li>
-                                        <li><a href="#Breaks-and-Headings">Breaks and Headings</a></li>
+                                        <li><a href="#Typography">Alarm</a></li>
+                                        <li><a href="#Articles">LIVE</a></li>
+                                        <li><a href="#Lists">Planned Disruptions</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -47,10 +45,9 @@
                                 <a href="">Pricing</a>
                                 <div class="dropdown">
                                     <ul>
-                                        <li><a href="">Concord</a></li>
-                                        <li><a href="">Manchester</a></li>
-                                        <li><a href="">Portsmouth</a></li>
-                                        <li><a href="">Hampton</a></li>
+                                        <li><a href="">Free</a></li>
+                                        <li><a href="">Standard</a></li>
+                                        <li><a href="">Premium</a></li>
                                     </ul>
                                 </div>
                             </li>
@@ -58,10 +55,9 @@
                                 <a href="">Download</a>
                                 <div class="dropdown">
                                     <ul>
-                                        <li><a href="">Montpelier</a></li>
-                                        <li><a href="">Burlington</a></li>
-                                        <li><a href="">Killington</a></li>
-                                        <li><a href="">St. Johnsbury</a></li>
+                                        <li><a href="">Android</a></li>
+                                        <li><a href="">iOS</a></li>
+                                        <li><a href="">Windows</a></li>
                                     </ul>
                                 </div>
                             </li>
