--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="branding">
                     <a href="https://github.com/imarc/boilerplate">
-                        <img src="img/logo-boilerplate.png" alt="Imarc Boilerplate">
+                        <img src="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing" alt="Imarc Boilerplate">
                     </a>
                 </div>
                 <div class="wrapper">
@@ -57,7 +57,7 @@
                                     <ul>
                                         <li><a href="">Android</a></li>
                                         <li><a href="">iOS</a></li>
-                                        <li><a href="">Windows</a></li>
+                                        <li><a href="">Windows Phone</a></li>
                                     </ul>
                                 </div>
                             </li>
