--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="primary">
             <div class="container">
                 <div class="branding">
-                    <a href="https://github.com/imarc/boilerplate">
-                        <img src="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing" alt="Imarc Boilerplate">
+                    <a href="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing">
+                        <img src="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing" alt="logo">
                     </a>
                 </div>
                 <div class="wrapper">
