--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         <div class="hero">
             <div class="copy">
                 <h1>
-                    Simple &amp; semantic frontend
+                    Revolutionising London
                 </h1>
                 <a class="button" href="https://github.com/imarc/boilerplate">
-                    Boilerplate on Github
+                    
                 </a>
             </div>
         </div>
@@ -102,28 +102,28 @@
                     <nav class="supplemental">
                         <ul>
                             <li>
-                                <a href="#Typography">Typography</a>
+                                <a href="#Typography">LIVE</a>
                                 <ul>
-                                    <li><a href="#Typographical-Blocks">Typographical Blocks</a></li>
+                                    <li><a href="#Typographical-Blocks">TfL Status</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#Lists">Lists</a>
+                                <a href="#Lists">Features</a>
                                 <ul>
-                                    <li><a href="#Unordered-Lists">Unordered Lists</a></li>
-                                    <li><a href="#Ordered-Lists">Ordered Lists</a></li>
-                                    <li><a href="#Definition-Lists">Definition Lists</a></li>
+                                    <li><a href="#Unordered-Lists">Alarm</a></li>
+                                    <li><a href="#Ordered-Lists">LIVE</a></li>
+                                    <li><a href="#Definition-Lists">Planned Disruptions</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="#Tables">Tables</a>
                             </li>
                             <li>
-                                <a href="#Forms">Forms</a>
+                                <a href="#Forms">Feedback</a>
                                 <ul>
-                                    <li><a href="#Messaging">Messaging</a></li>
-                                    <li><a href="#Fields">Fields</a></li>
-                                    <li><a href="#Buttons">Buttons</a></li>
+                                    <li><a href="#Messaging">How do you find the app?</a></li>
+                                    <li><a href="#Fields">How do you travel to work?</a></li>
+                                    <li><a href="#Buttons">Glitches</a></li>
                                 </ul>
                             </li>
                         </ul>
