--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <h1>
                     Revolutionising London
                 </h1>
-                <a class="button" href="https://github.com/imarc/boilerplate">
+                <a class="button" href="https://github.com/imarc/boilerplate">Download</a>
                     
                 </a>
             </div>
