--- a/index.html
+++ b/index.html
@@ -176,47 +176,44 @@
                     </p>
                     
                     <blockquote>
-                        This, on the otherhand, is a blockquote, meant for large
-                        quotes from other sources. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Felis est, nec convallis dui.
+                       To live a creative life, we must lose our fear of being wrong - Goldhawk Road thought of the day.
                     </blockquote>
                 </section>
 
 
                 <section>
-                    <h2 id="Lists">Lists</h2>
-                    <h3 id="Unordered-Lists">Unordered Lists</h3>
+                    <h2 id="Lists">Planned Disrputions</h2>
+                    <h3 id="Unordered-Lists">Underground</h3>
 
                     <ul>
                         <li>
-                            This is an unordered list – ipsum dolor sit amet, consectetur adipiscing
-                            elit fringilla libero id quam semper semper.
+                           6th June 2016 - Metropolitan Line - Aldate to Baker Street closure due to planned engineering works
                         </li>
                         <li>
-                            Bar is listed second – Cras fringilla libero id quam semper semper ipsum dolor sit amet, consectetur adipiscing elit fringilla libero id quam semper semper.
+                           11th June 2016 - Victoria + Jubilee Line - Full 24hr Closure due to Queen 90th Birthday Celebrations
                         </li>
                     </ul>
 
-                    <h3 id="Ordered-Lists">Ordered Lists</h3>
+                    <h3 id="Ordered-Lists">Other TfL</h3>
 
                     <ol>
-                        <li>Wake up in the morning</li>
-                        <li>Freshen up and go downstairs</li>
-                        <li>Have a bowl of cereal</li>
-                        <li>Go to the bus stop</li>
+                        <li>No Santander Bike disruptions</li>
+                        <li>8th July - mbna Thames Clipper - No service between Greenwich and Tower Bridge</li>
+                        <li>No Emirates Air Line disruptions</li>
+                        <li>No Taxi disruptions</li>
                     </ol>
 
-                    <h3 id="Definition-Lists">Definition Lists</h3>
+                    <h3 id="Definition-Lists">Buses</h3>
 
                     <dl>
-                        <dt>iPod</dt>
-                        <dd>The iPod is a line of portable media players designed and marketed by Apple Inc.</dd>
+                        <dt>Covent Garden</dt>
+                        <dd>22 minute delays</dd>
 
-                        <dt>VCR</dt>
-                        <dd>The VCR is an electro-mechanical device that records analog audio and analog video from broadcast television on a removable tape. </dd>
+                        <dt>Tower Bridge</dt>
+                        <dd>Closed for maintenance, please use 576 bus for replacement service. Delay of 13 minutes.</dd>
 
-                        <dt>Walkman</dt>
-                        <dd>Walkman is a Sony brand tradename originally used for portable audio cassette players. </dd>
+                        <dt>Kew Gardens</dt>
+                        <dd>Expect severe delays today due to Queen 90th Birthday celebrations</dd>
                     </dl>
                 </section>
 
