--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 
                     <ul>
                         <li>
-                           6th June 2016 - Metropolitan Line - Aldate to Baker Street closure due to planned engineering works
+                           <strong>6th June 2016</strong> - Metropolitan Line - Aldate to Baker Street closure due to planned engineering works
                         </li>
                         <li>
-                           11th June 2016 - Victoria + Jubilee Line - Full 24hr Closure due to Queen 90th Birthday Celebrations
+                           <strong>11th June 2016</strong> - Victoria + Jubilee Line - Full 24hr Closure due to Queen 90th Birthday Celebrations
                         </li>
                     </ul>
 
@@ -198,7 +198,7 @@
 
                     <ol>
                         <li>No Santander Bike disruptions</li>
-                        <li>8th July - mbna Thames Clipper - No service between Greenwich and Tower Bridge</li>
+                        <li><strong>8th July</strong> - mbna Thames Clipper - No service between Greenwich and Tower Bridge</li>
                         <li>No Emirates Air Line disruptions</li>
                         <li>No Taxi disruptions</li>
                     </ol>
