--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
 
                     <ul>
                         <li>
-                           <strong>6th June 2016</strong> - Metropolitan Line - Aldate to Baker Street closure due to planned engineering works
+                           <strong>6th June 2016</strong> - <em>Metropolitan Line</em> - Aldate to Baker Street closure due to planned engineering works
                         </li>
                         <li>
-                           <strong>11th June 2016</strong> - Victoria + Jubilee Line - Full 24hr Closure due to Queen 90th Birthday Celebrations
+                           <strong>11th June 2016</strong> - <em>Victoria + Jubilee Line</em> - Full 24hr Closure due to Queen 90th Birthday Celebrations
                         </li>
                     </ul>
 
