--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                     <ol>
                         <li>No Santander Bike disruptions</li>
-                        <li><strong>8th July</strong> - mbna Thames Clipper - No service between Greenwich and Tower Bridge</li>
+                        <li><strong>8th July</strong> - <em>mbna Thames Clipper</em> - No service between Greenwich and Tower Bridge</li>
                         <li>No Emirates Air Line disruptions</li>
                         <li>No Taxi disruptions</li>
                     </ol>
