--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <em>emphasized text</em>, and
                         <strong>strong text</strong>.
                     </p>
-
+<div style="width:260px"><script language="JavaScript" src="https://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
 
                     <h2>
                         How?
