--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <div style="width:260px"><script language="JavaScript" src="https://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
 
                     <h2>
-                        How?
+                        How?-
                     </h2>
                     
                     <p>
