--- a/index.html
+++ b/index.html
@@ -141,10 +141,9 @@
                         <em>emphasized text</em>, and
                         <strong>strong text</strong>.
                     </p>
-<div style="width:260px"><script language="JavaScript" src="https://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
 
                     <h2>
-                        How?-
+                        How?
                     </h2>
                     
                     <p>
@@ -182,7 +181,8 @@
 
 
                 <section>
-                    <h2 id="Lists">Planned Disrputions</h2>
+                    <h2 id="Lists">Current Disruptions</h2>
+                    <h2 id="Lists">Predicted Disrputions</h2>
                     <h3 id="Unordered-Lists">Underground</h3>
 
                     <ul>
