--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="primary">
             <div class="container">
                 <div class="branding">
-                    <a href="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing">
-                        <img src="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing" alt="logo">
+                    <a href="http://www.eurail.com/sites/eurail.com/files/tgv_high-spped_train_france.jpg">
+                        <img src="http://www.eurail.com/sites/eurail.com/files/tgv_high-spped_train_france.jpg" alt="logo">
                     </a>
                 </div>
                 <div class="wrapper">
