--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="primary">
             <div class="container">
                 <div class="branding">
-                    <a href="https%3A//drive.google.com/09577b8c-0019-44ba-a78e-32d3366f11bc">
-                        <img src="https%3A//drive.google.com/09577b8c-0019-44ba-a78e-32d3366f11bc" alt="logo">
+                    <a href="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing">
+                        <img src="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing" alt="logo">
                     </a>
                 </div>
                 <div class="wrapper">
