--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="primary">
             <div class="container">
                 <div class="branding">
-                    <a href="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing">
-                        <img src="https://drive.google.com/file/d/0B6GHGNKznr5mWFBpTVNacWxneEk/view?usp=sharing" alt="logo">
+                    <a href="/communities/3/004/013/425/753//images/4628480973.png">
+                        <img src="/communities/3/004/013/425/753//images/4628480973.png" alt="logo">
                     </a>
                 </div>
                 <div class="wrapper">
