--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="branding">
                     <a href="/communities/3/004/013/425/753//images/4628480973.png">
-                        <img src="/communities/3/004/013/425/753//images/4628480973.png" alt="logo">
+                        <img src="/communities/3/004/013/425/753//images/4628480973.png" alt="Screen Shot 2016-02-01 at 15.20.16" class="page_home_fViljoyxH4CYVuoPevF1w">
                     </a>
                 </div>
                 <div class="wrapper">
