--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="primary">
             <div class="container">
                 <div class="branding">
-                    <a href="/communities/3/004/013/425/753//images/4628480973.png">
-                        <img src="/communities/3/004/013/425/753//images/4628480973.png" alt="Screen Shot 2016-02-01 at 15.20.16" class="page_home_fViljoyxH4CYVuoPevF1w">
+                    <a href="http://terminocitytesting.moonfruit.com/communities/3/004/013/425/753//images/4628480973.png">
+                        <img src="http://terminocitytesting.moonfruit.com/communities/3/004/013/425/753//images/4628480973.png" alt="logo">
                     </a>
                 </div>
                 <div class="wrapper">
@@ -57,7 +57,7 @@
                                     <ul>
                                         <li><a href="">Android</a></li>
                                         <li><a href="">iOS</a></li>
-                                        <li><a href="">Windows Phone</a></li>
+                                        <li><a href="">Windows Phonee</a></li>
                                     </ul>
                                 </div>
                             </li>
