--- a/index.html
+++ b/index.html
@@ -85,6 +85,98 @@
             </div>
         </header>
 
+
+
+
+
+
+<div id="home" class="section scrollspy">
+
+<!--Hero-->
+<div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+        <h1 class="text_h center header cd-headline letters type">
+            <span>Homework Heroes is </span> 
+            <span class="cd-words-wrapper waiting">
+                <b class="is-hidden" style="opacity: 1;"><i class="out">f</i><i class="out">u</i><i class="out">m</i><i class="out">;</i></b>
+                <b class="is-hidden" style="opacity: 1;"><i class="out">c</i><i class="out">o</i><i class="out">m</i><i class="out">e</i><i class="out">p</i><i class="out">t</i><i class="out">i</i><i class="out">t</i><i class="out">i</i><i class="out">v</i><i class="out">e</i><i class="out">.</i></b>
+                <b class="is-visible" style="opacity: 1;"><i class="in">e</i><i class="in">x</i><i class="in">i</i><i class="in">t</i><i class="in">e</i><i class="in">n</i><i class="in">g</i><i class="in">.</i></b>
+                <b style="opacity: 1;" class="is-hidden"><i class="out">e</i><i class="out">d</i><i class="out">u</i><i class="out">m</i><i class="out">a</i><i class="out">c</i><i class="out">a</i><i class="out">t</i><i class="out">i</i><i class="out">o</i><i class="out">n</i><i class="out">a</i><i class="out">b</i><i class="out">l</i><i class="out">e</i><i class="out">.</i></b>
+                <b style="opacity: 1;" class="is-hidden"><i class="out">g</i><i class="out">u</i><i class="out">d</i><i class="out"> </i><i class="out">t</i><i class="out">e</i><i class="out">e</i><i class="out">c</i><i class="out">h</i><i class="out">e</i><i class="out">r</i><i class="out"> </i><i class="out">o</i><i class="out">f</i><i class="out"> </i><i class="out">s</i><i class="out">p</i><i class="out">l</i><i class="out">e</i><i class="out">l</i><i class="out">i</i><i class="out">n</i><i class="out">g</i></b>
+            </span>
+        </h1>
+    </div>
+</div>
+
+<!--Intro and service-->
+<div id="about" class="section scrollspy">
+     <h2 class="header text_b"> About </h2>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-image-flash-on"></i>
+                    <h5 class="promo-caption">Expand Your Knowledge</h5>
+                    <p class="light center">Homework Heroes allows you to answer questions based on your ability in a range of subjects from A-Level and GCSE. Also people can answer your questions and help you learn.</p>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-social-group"></i>
+                    <h5 class="promo-caption">Learn Together</h5>
+                    <p class="light center">When you ask and answer questions you help everyone, them, you and anyone who read your questions or your answers meaning to Homework Heroes lets everyone learn together.</p>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-hardware-desktop-windows"></i>
+                    <h5 class="promo-caption">Customise Your Character</h5>
+                    <p class="light center">Homework Heroes is different to anything else that you will find, by answering questions, you can upgrade and customise your own character who can help you in quizzes and give you learning tips.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+<!--Intro and service-->
+<div id="about" class="section scrollspy">
+     <h2 class="header text_b"> About </h2>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-image-flash-on"></i>
+                    <h5 class="promo-caption">Expand Your Knowledge</h5>
+                    <p class="light center">Homework Heroes allows you to answer questions based on your ability in a range of subjects from A-Level and GCSE. Also people can answer your questions and help you learn.</p>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-social-group"></i>
+                    <h5 class="promo-caption">Learn Together</h5>
+                    <p class="light center">When you ask and answer questions you help everyone, them, you and anyone who read your questions or your answers meaning to Homework Heroes lets everyone learn together.</p>
+                </div>
+            </div>
+            <div class="col s12 m4 l4">
+                <div class="center promo promo-example">
+                    <i class="mdi-hardware-desktop-windows"></i>
+                    <h5 class="promo-caption">Customise Your Character</h5>
+                    <p class="light center">Homework Heroes is different to anything else that you will find, by answering questions, you can upgrade and customise your own character who can help you in quizzes and give you learning tips.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+<!-- Comment
+
         <div class="hero">
             <div class="copy">
                 <h1>
@@ -94,7 +186,7 @@
                     
                 </a>
             </div>
-        </div>
+        </div> -->
 
         <div class="torso">
             <aside class="primary">
