--- a/index.html
+++ b/index.html
@@ -1,8 +1,57 @@
 <html lang="en">
     <head>
+        <style style="text/css">
+.example1 {
+ height: 50px;	
+ overflow: hidden;
+ position: relative;
+}
+.example1 h3 {
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ line-height: 50px;
+ text-align: center;
+ /* Starting position */
+ -moz-transform:translateX(100%);
+ -webkit-transform:translateX(100%);	
+ transform:translateX(100%);
+ /* Apply animation to this element */	
+ -moz-animation: example1 15s linear infinite;
+ -webkit-animation: example1 15s linear infinite;
+ animation: example1 15s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes example1 {
+ 0%   { -moz-transform: translateX(100%); }
+ 100% { -moz-transform: translateX(-100%); }
+}
+@-webkit-keyframes example1 {
+ 0%   { -webkit-transform: translateX(100%); }
+ 100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes example1 {
+ 0%   { 
+ -moz-transform: translateX(100%); /* Firefox bug fix */
+ -webkit-transform: translateX(100%); /* Firefox bug fix */
+ transform: translateX(100%); 		
+ }
+ 100% { 
+ -moz-transform: translateX(-100%); /* Firefox bug fix */
+ -webkit-transform: translateX(-100%); /* Firefox bug fix */
+ transform: translateX(-100%); 
+ }
+}
+</style>
+
+
+
+
+
+        
         <meta charset="UTF-8" />
         <title>myCommute</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
         <meta name="description" content="The Imarc Boilerplate is a streamlined starting point for building websites." />
         <meta name="web_author" content="Imarc, A Digital Agency | Boston + Silicon Valley | more info at imarc.com" />
         <meta name="viewport" content="width=device-width" />
@@ -91,93 +140,6 @@
 
 
 
-<div id="home" class="section scrollspy">
-
-<!--Hero-->
-<div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-        <h1 class="text_h center header cd-headline letters type">
-            <span>Homework Heroes is </span> 
-            <span class="cd-words-wrapper waiting">
-                <b class="is-hidden" style="opacity: 1;"><i class="out">f</i><i class="out">u</i><i class="out">m</i><i class="out">;</i></b>
-                <b class="is-hidden" style="opacity: 1;"><i class="out">c</i><i class="out">o</i><i class="out">m</i><i class="out">e</i><i class="out">p</i><i class="out">t</i><i class="out">i</i><i class="out">t</i><i class="out">i</i><i class="out">v</i><i class="out">e</i><i class="out">.</i></b>
-                <b class="is-visible" style="opacity: 1;"><i class="in">e</i><i class="in">x</i><i class="in">i</i><i class="in">t</i><i class="in">e</i><i class="in">n</i><i class="in">g</i><i class="in">.</i></b>
-                <b style="opacity: 1;" class="is-hidden"><i class="out">e</i><i class="out">d</i><i class="out">u</i><i class="out">m</i><i class="out">a</i><i class="out">c</i><i class="out">a</i><i class="out">t</i><i class="out">i</i><i class="out">o</i><i class="out">n</i><i class="out">a</i><i class="out">b</i><i class="out">l</i><i class="out">e</i><i class="out">.</i></b>
-                <b style="opacity: 1;" class="is-hidden"><i class="out">g</i><i class="out">u</i><i class="out">d</i><i class="out"> </i><i class="out">t</i><i class="out">e</i><i class="out">e</i><i class="out">c</i><i class="out">h</i><i class="out">e</i><i class="out">r</i><i class="out"> </i><i class="out">o</i><i class="out">f</i><i class="out"> </i><i class="out">s</i><i class="out">p</i><i class="out">l</i><i class="out">e</i><i class="out">l</i><i class="out">i</i><i class="out">n</i><i class="out">g</i></b>
-            </span>
-        </h1>
-    </div>
-</div>
-
-<!--Intro and service-->
-<div id="about" class="section scrollspy">
-     <h2 class="header text_b"> About </h2>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-image-flash-on"></i>
-                    <h5 class="promo-caption">Expand Your Knowledge</h5>
-                    <p class="light center">Homework Heroes allows you to answer questions based on your ability in a range of subjects from A-Level and GCSE. Also people can answer your questions and help you learn.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-social-group"></i>
-                    <h5 class="promo-caption">Learn Together</h5>
-                    <p class="light center">When you ask and answer questions you help everyone, them, you and anyone who read your questions or your answers meaning to Homework Heroes lets everyone learn together.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-hardware-desktop-windows"></i>
-                    <h5 class="promo-caption">Customise Your Character</h5>
-                    <p class="light center">Homework Heroes is different to anything else that you will find, by answering questions, you can upgrade and customise your own character who can help you in quizzes and give you learning tips.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
-<!--Intro and service-->
-<div id="about" class="section scrollspy">
-     <h2 class="header text_b"> About </h2>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-image-flash-on"></i>
-                    <h5 class="promo-caption">Expand Your Knowledge</h5>
-                    <p class="light center">Homework Heroes allows you to answer questions based on your ability in a range of subjects from A-Level and GCSE. Also people can answer your questions and help you learn.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-social-group"></i>
-                    <h5 class="promo-caption">Learn Together</h5>
-                    <p class="light center">When you ask and answer questions you help everyone, them, you and anyone who read your questions or your answers meaning to Homework Heroes lets everyone learn together.</p>
-                </div>
-            </div>
-            <div class="col s12 m4 l4">
-                <div class="center promo promo-example">
-                    <i class="mdi-hardware-desktop-windows"></i>
-                    <h5 class="promo-caption">Customise Your Character</h5>
-                    <p class="light center">Homework Heroes is different to anything else that you will find, by answering questions, you can upgrade and customise your own character who can help you in quizzes and give you learning tips.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-<!-- Comment
-
         <div class="hero">
             <div class="copy">
                 <h1>
@@ -187,7 +149,7 @@
                     
                 </a>
             </div>
-        </div> -->
+        </div> 
 
         <div class="torso">
             <aside class="primary">
@@ -227,6 +189,11 @@
             <main>
                 <section>
                     <h2 id="Typography">In a sentence</h2>
+
+<div class="example1">
+<h3>Scrolling text... </h3>
+</div>
+
 
                     <p>
                        We are developing a multi-device platform to improve your journey to work
