--- a/index.html
+++ b/index.html
@@ -188,11 +188,14 @@
 
             <main>
                 <section>
+                    
+                    <div class="example1">
+<h3>SEVERE Delays: Metropolitan, Central, Northern. MINOR Delays: Jubilee. Pically Circus SUSPENDED. Emirates air line CLOSED. </h3>
+</div>
+                
                     <h2 id="Typography">In a sentence</h2>
 
-<div class="example1">
-<h3>Scrolling text... </h3>
-</div>
+
 
 
                     <p>
