--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
         </div> 
                     <div class="example1">
-<h3>SEVERE Delays: Metropolitan, Central, Northern. MINOR Delays: Jubilee. Pically Circus SUSPENDED. Emirates air line CLOSED. </h3>
+<h3>SEVERE Delays: Metropolitan, Central, Northern. MINOR Delays: Jubilee. Picadilly Circus SUSPENDED. Emirates air line CLOSED. mbna River Taxi PART SUSPENDED. </h3>
 </div>
         <div class="torso">
             <aside class="primary">
